src/components/stars/stars.module.css
.wrapper {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
  overflow-y: scroll;
  perspective: 1px;
  perspective-origin: 0 0;
}

.stars {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  transform-origin: 0 0;
  transform: translateZ(-1px) scale(2);
  z-index: -1;
}

